# Enterprise-Task-Management

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 14d1c45a7813_initial_schema.py
src/app/: container.py  main.py
src/app/auth/: exceptions.py  utilities.py
src/app/core/: exceptions.py  settings.py
src/app/domain/Entities/: Task.py
src/app/domain/auth/: users.py  utilities.py
src/app/domain/ports/driven/: user_context_port.py
src/app/domain/user_management/: exceptions.py  users.py  utilities.py
src/app/domain/user_management/entities/: users.py
src/app/domain/user_management/value_objects/: user_info.py
src/app/infrastructure/persistence/: base.py
src/app/scripts/: admin_user.py  init_db.py
src/app/user_management/domain/: exceptions.py
tests/: conftest.py
tests/auth_tests/: test_user_info.py  test_user_roles.py
tests/user_management/adapters/driven/: fake_user_repo.py
tests/user_management/application/: conftest.py
tests/user_management/application/services/: test_authentication_service.py  test_user_application_service.py
tests/user_management/application/use_cases/: test_create_user_use_case.py
tests/user_management/infrastructure/auth/: fake_token_service.py  test_auth_token_service.py
tests/user_management/infrastructure/persistence/: conftest.py  fake_in_memory_uow.py  test_async_user_repo.py
tests/user_management/infrastructure/security/: fake_password_hasher.py  test_argon2_hasher.py
(+36 files in other folders)
